--- a/.yamato/urp_performance_boatattack-xrquest-vulkan.yml
+++ b/.yamato/urp_performance_boatattack-xrquest-vulkan.yml
@@ -82,7 +82,7 @@ Build_URP_Performance_BoatAttack_XRQuest_Vulkan_performance_playmode_runtime_il2
               set jenkinsNodeLabel="Quest"
               set runTests="True"
               set cmd=--artifacts_path=TestProjects/BoatAttack/test-results --build-only --category=URP --editor-location=./WindowsEditor --extra-editor-arg="-addscenetobuild=Assets/scenes/Testing/benchmark_island-static.unity" --extra-editor-arg="-buildtarget" --extra-editor-arg="Android" --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-enabledxrtargets=OculusXRSDK -stereoRenderingMode=MultiPass" --extra-editor-arg="-executemethod" --extra-editor-arg="Editor.Setup" --extra-editor-arg="-packageundertestbranch=%GIT_BRANCH%" --extra-editor-arg="-packageundertestname=com.unity.render-pipelines.universal" --extra-editor-arg="-packageundertestrev=%GIT_REVISION%" --extra-editor-arg="-packageundertestrevdate=%GIT_REVISIONDATE%" --extra-editor-arg="-scriptingbackend=IL2CPP" --platform=Android --player-save-path=build/players --scripting-backend=IL2CPP --suite=playmode --testfilter=Medium --testproject=./TestProjects/BoatAttack --timeout=1200
-              cd xr.xrautomatedtests/.yamato && python CheckIfPlayerExistsAndBuild.py -s -p
+              python xr.xrautomated/.yamato/CheckIfPlayerExistsAndBuild.py -s
     artifacts:
         logs:
             paths:
