--- a/.yamato/urp_performance_boatattack-xrquest-vulkan.yml
+++ b/.yamato/urp_performance_boatattack-xrquest-vulkan.yml
@@ -69,8 +69,6 @@ Build_URP_Performance_BoatAttack_XRQuest_Vulkan_performance_playmode_runtime_il2
       -  NetSh Advfirewall set allprofiles state off
       -  curl -s https://artifactory.prd.it.unity3d.com/artifactory/unity-tools-local/utr-standalone/utr.bat --output utr.bat
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
-      -  pip install pywin32
-      -  unity-downloader-cli -u {{editor_versions.trunk_latest_internal.XRQuest.revision}} -p WindowsEditor -c editor -c il2cpp -c android  --wait --published-only
       -  |5-
               git rev-parse HEAD | git show -s --format=%%cI > revdate.tmp
               set /p GIT_REVISIONDATE=<revdate.tmp
@@ -82,8 +80,12 @@ Build_URP_Performance_BoatAttack_XRQuest_Vulkan_performance_playmode_runtime_il2
               set jenkinsJob="SBR_Quest_RunTest"
               set jenkinsNodeLabel="Quest"
               set runTests="True"
+              set includeAndroid="True"
+              set includeUWP="False"
+              set includeIL2CPP="True"
+              set includeIOS="False"
               set cmd=--artifacts_path=TestProjects/BoatAttack/test-results --build-only --category=URP --editor-location=./WindowsEditor --extra-editor-arg="-addscenetobuild=Assets/scenes/Testing/benchmark_island-static.unity" --extra-editor-arg="-buildtarget" --extra-editor-arg="Android" --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-enabledxrtargets=OculusXRSDK -stereoRenderingMode=MultiPass" --extra-editor-arg="-executemethod" --extra-editor-arg="Editor.Setup" --extra-editor-arg="-packageundertestbranch=%GIT_BRANCH%" --extra-editor-arg="-packageundertestname=com.unity.render-pipelines.universal" --extra-editor-arg="-packageundertestrev=%GIT_REVISION%" --extra-editor-arg="-packageundertestrevdate=%GIT_REVISIONDATE%" --extra-editor-arg="-scriptingbackend=IL2CPP" --platform=Android --player-save-path=build/players --scripting-backend=IL2CPP --suite=playmode --testfilter=Medium --testproject=./TestProjects/BoatAttack --timeout=1200
-              python xr.xrautomatedtests/.yamato/CheckIfPlayerExistsAndBuild.py -s
+              python xr.xrautomatedtests/.yamato/CheckIfPlayerExistsAndBuild.py
     artifacts:
         logs:
             paths:
